Update: Softly migrate away from MediaEndpoints with URLs